# aidev

./: .behaverc  .eslintrc.json  .gitignore  CLAUDE.md  FEATURE.md  FEATURE.vf.json  FILE_API_PROJECT_COMPLETION.md  FILE_STRUCTURE.md  FILE_STRUCTURE.vf.json  README.md  TASK_QUEUE.md  TASK_QUEUE.vf.json  TASK_QUEUE_REGISTRY.vf.json  bunfig.toml  cucumber.yml  fix-all-async-issues.sh  fix-async-tests.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json
demo/test-creator/: CMakeLists.txt  FEATURE.vf.json  TASK_QUEUE.vf.json  demo.sh  demo_llm.sh  demo_output_example.txt  demo_retry.sh  requirements.txt  setup.sh  test_case_generator.py  test_case_generator_llm.py  test_creator_enhanced.py  test_creator_llm.py  test_creator_retry.py  test_generator.py  test_generator_enhanced.py  test_generator_simple.py
demo/test-creator/demo/: setup_deepseek_r1.sh
demo/test-creator/demo_deepseek/: StringUtils.cpp  StringUtils.h  example_deepseek_output.cpp  example_enhanced_output.cpp  final_demo.sh  run_demo.sh  simple_test.py  test_real_demo.py
demo/test-creator/demo_deepseek/tests/: StringUtilsTest.cpp
demo/test-creator/demo_deepseek/tests_enhanced/: StringUtilsTest.cpp
demo/test-creator/demo_project/mocks/core/: CalculatorMock.h  DatabaseMock.h
demo/test-creator/demo_project/mocks/utils/: LoggerMock.h
demo/test-creator/demo_project/src/core/: Calculator.h  Database.h
demo/test-creator/demo_project/src/utils/: Logger.h
demo/test-creator/example/: CMakeLists.txt  Calculator.cpp  Calculator.h  Makefile  compile_llm_test  compile_llm_test.cpp  compile_test  compile_test.cpp  test_with_llm_simulation.cpp
demo/test-creator/example/output/example/: CalculatorTest.cpp
demo/test-creator/example/output_llm/: test_generation_summary.json
demo/test-creator/example/output_llm/example/: CalculatorTest.cpp
demo/test-creator/layer/themes/setup-folder/: package-lock.json  package.json  tsconfig.json
demo/test-creator/layer/themes/setup-folder/children/src/: cli.ts  types.ts
demo/test-creator/layer/themes/setup-folder/pipe/: index.ts
demo/test-creator/layer/themes/setup-folder/test-deploy/: TASK_QUEUE.vf.json  package-lock.json  package.json  tsconfig.json
demo/test-creator/layer/themes/setup-folder/test-deploy/config/: mcp-agent.json
demo/test-creator/layer/themes/setup-folder/tests/integration/: setup-workflow.itest.d.ts.map  (+2 more)
demo/test-creator/llm_rules/additional/: KNOW_HOW_EXECUTABLE_WRAPPING.md
demo/test-creator/llm_rules/steps/: task_queue_steps.ts  task_queue_validation_steps.ts
demo/test-creator/llm_rules/steps/examples/: task_queue_runnable.feature
demo/test-creator/src/: Calculator.cpp  Calculator.h  Logger.h
demo/test-creator/src/utils/: Logger.h
demo/test-creator/tests/: CalculatorTest.cpp  CalculatorTest_clean.cpp  LoggerTest.cpp  LoggerTest_clean.cpp  calculator_test.cpp
demo/test-creator/tests/math/: CalculatorTest.cpp
demo/vscode-extension-cdoctest/demo/bypass-build-demo/: CMakeLists.txt  build_manual.sh  test_bypass_feature.sh
demo/vscode-extension-cdoctest/demo/bypass-build-demo/src/: hello.cpp  main.cpp
demo/vscode-extension-cdoctest/demo/gtest-example/: CMakeLists.txt  build_and_test.sh  demo_output.txt
demo/vscode-extension-cdoctest/demo/gtest-example/src/: math_operations.cpp  math_operations.h
demo/vscode-extension-cdoctest/demo/gtest-example/tests/: test_string_utils.cpp
demo/vscode-extension-cdoctest/test/fixtures/ctest-sample-project/: CMakeLists.txt
demo/vscode-extension-cdoctest/test/fixtures/ctest-sample-project/include/: math_utils.h  string_utils.h
demo/vscode-extension-cdoctest/test/fixtures/ctest-sample-project/src/: math_utils.cpp  string_utils.cpp
demo/vscode-extension-cdoctest/test/fixtures/ctest-sample-project/test/: test_math.cpp  test_string.cpp
doc/research/explorer/: SYSTEM_TEST_SUMMARY.md  TESTING.md  TEST_RESULTS.md  WEB_APP_BUG_REPORT.md  pyproject.toml  setup-uv.sh
doc/research/explorer/config/: invariants.yaml
doc/research/explorer/findings/: aidev_platform_bugs_20250815_234656.json  demo_20250815_150538_report.json
doc/research/explorer/scripts/: explore-aidev-platform.py  explorer.py
doc/research/explorer/test-apps/secure-app/: server.js
doc/research/explorer/test-apps/vulnerable-app/: package.json  server.js
doc/research/explorer/tests/: package-lock.json  package.json  run-system-tests.sh  security-verification.test.ts  test-bun-security.js  test-fraud-checker.js  test-secure-app.js  tsconfig.json
doc/research/explorer/tests/playwright/: explorer-e2e.spec.ts
doc/research/explorer/tests/system/: explorer-system.test.js
layer/themes/infra_filesystem-mcp/examples/hello-world/hello_demo/: CMakeLists.txt  build.sh  hello.py  hello_cpp
layer/themes/infra_test-as-manual/children/cucumber-cpp/: CMakeLists.txt
layer/themes/infra_test-as-manual/children/cucumber-cpp/build_examples/: CMakeCache.txt  Makefile  cmake_install.cmake  manual_test_example
layer/themes/infra_test-as-manual/children/cucumber-cpp/cmake/: CucumberCpp.cmake
layer/themes/infra_test-as-manual/children/cucumber-cpp/examples/: CMakeLists.txt  build_and_run.sh  calculator_steps.cpp  calculator_test_main.cpp  demo.cpp  demo_manual_tests.json  login.feature  manual_test_example.cpp  simple_demo  simple_demo.cpp  test_runner.cpp
layer/themes/infra_test-as-manual/children/cucumber-cpp/features/: user_authentication.feature
layer/themes/infra_test-as-manual/children/cucumber-cpp/include/: catch2_integration.hpp  gherkin_parser.hpp  manual_generator.hpp  step_registry.hpp
layer/themes/infra_test-as-manual/children/cucumber-cpp/src/: catch2_integration.cpp  cucumber_cli.cpp  gherkin_parser.cpp  manual_generator.cpp  step_registry.cpp
layer/themes/infra_test-as-manual/children/cucumber-cpp/tests/: CMakeLists.txt  test_gherkin_parser.cpp  test_step_registry.cpp
layer/themes/infra_test-as-manual/children/cucumber-python/: pyproject.toml
layer/themes/infra_test-as-manual/children/cucumber-python/src/: __init__.py  behave_wrapper.py  gherkin_parser.py  manual_generator.py
(+6802 files in other folders)
