[project]
name = "cucumber-python"
version = "1.0.0"
description = "Cucumber BDD testing framework for Python with test-as-manual documentation"
authors = [
    {name = "AI Development Platform"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "behave>=1.2.6",
    "pytest-bdd>=6.1.0",
    "jinja2>=3.1.0",
    "coverage>=7.0.0",
    "hamcrest>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

[project.scripts]
cucumber-python = "cucumber_python.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.behave]
paths = ["features"]
default_tags = "~@skip"
show_source = true
show_timings = true
junit = true
junit_directory = "reports"

[tool.cucumber-python]
manual_output_dir = "docs/manual_tests"
default_format = "markdown"
include_screenshots = true
generate_ids = true
template_dir = "templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100